fix broken spacing on product page when pagerank is 10.00

--- a/static/less/main.less
+++ b/static/less/main.less
@@ -835,7 +835,7 @@ div.package-page {
       .top-importers {
         float: left;
         margin: -40px 0 0 60px;
-        width: 400px;
+        width: 350px;
         h4 {
           font-size: 24px;
           margin-bottom: 20px;
@@ -1000,7 +1000,7 @@ snippet
 
 
 span.snippet {
-  margin: 15px 0 15px 0;
+  margin: 15px 0 15px 5px;
   padding: 4px 0;
   color: #333;
   text-decoration: none;
@@ -1194,7 +1194,7 @@ span.snippet {
   float: left;
   margin-top: 8px;
   line-height: 1.3;
-  width: 36px;
+  width: 30px;
   cursor: default;
 
   &.not-academic {
